# mfs_send_mail

./: README.md  pyproject.toml
src/mfs_send_mail/: mfs_send_mail.py
